trying fixes for header on ie 6

--- a/WebContent/css/ie.css
+++ b/WebContent/css/ie.css
@@ -17,3 +17,45 @@ div#maincontainer p{
 	line-height: 28px;
 	color: #f7f7f7;
 }
+
+
+#masthead {
+	width: expression((document.body.clientWidth < 892)? "880px" : "auto");
+   	min-width: 890px;
+}
+
+#bodyholder {
+	width: expression((document.body.clientWidth < 892)? "880px" : "auto");
+	min-width: 890px;
+
+}
+
+#content {
+	width: expression((document.body.clientWidth < 892)? "880px" : "auto");
+	min-width: 890px;
+}
+
+div#maincontainer {
+	width: expression((document.body.clientWidth < 892)? "790px" : "auto");
+	min-width: 790px;
+	}
+
+#footercontent {
+	width: expression((document.body.clientWidth < 892)?  "880px" : "auto");
+	min-width: 890px;
+}
+
+
+h1 {
+	width: expression((document.body.clientWidth < 892)? "760px" : "auto");
+	min-width: 760px;
+}
+
+#tab {
+	min-width: 890px;
+	max-width: 1150px;
+	width:expression((document.body.clientWidth < 892)? "890px" : "auto");
+}
+
+
+
